[package]
name = "gmus"
version = "0.1.0"
edition = "2021"
description = "A small macOS-first terminal music player inspired by cmus."
license = "MIT OR Apache-2.0"

[features]
default = ["playback-rodio", "macos-media-session"]
bundled-sqlite = ["rusqlite/bundled"]
macos-media-session = ["dep:cocoa", "dep:souvlaki"]
playback-rodio = ["dep:rodio"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
hex = "0.4"
lofty = "0.24"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
rodio = { version = "0.22", default-features = false, features = ["playback", "mp3", "flac", "mp4", "vorbis", "wav", "symphonia-aiff", "symphonia-alac", "symphonia-caf"], optional = true }
rusqlite = { version = "0.39", default-features = false }
sha2 = "0.10"
thiserror = "2.0"
unicode-width = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { version = "0.24", optional = true }
souvlaki = { version = "0.8.3", optional = true }

[dev-dependencies]
tempfile = "3.27"

[profile.dev.package."*"]
opt-level = 2
